# micro-mink

./: .clang-format  .ycm_extra_conf.py  Makefile.am  README.md  configure.ac
.github/workflows/: on_push.yml
src/include/: umink_plugin.h  umlua.h
src/services/sysagent/: sysagentd.c  umlua.c  umlua_m.c
src/services/sysagent/plugins/coap/: Makefile.am  plg_sysagent_coap.c
src/services/sysagent/plugins/dbus/: Makefile.am  plg_sysagent_dbus.c
src/services/sysagent/plugins/mqtt/: plg_sysagent_mqtt.c
src/utils/: umink_plugin.c
test/: plg_cfg_mqtt.json  plg_cfg_mqtt_err_01.json  plg_cfg_mqtt_err_02.json  plg_cfg_mqtt_err_03.json  plg_cfg_mqtt_err_04.json  plg_cfg_mqtt_err_05.json  plg_cfg_mqtt_err_06.json  plg_cfg_mqtt_err_07.json
